--- a/environment.yml
+++ b/environment.yml
@@ -1,10 +1,11 @@
 name: pokenv
 channels:
+  - anaconda
   - conda-forge
   - defaults
 dependencies:
   - _libgcc_mutex=0.1=conda_forge
-  - _openmp_mutex=4.5=2_gnu
+  - _openmp_mutex=4.5=2_kmp_llvm
   - aiohttp=3.8.4=py311h2582759_0
   - aiohttp-retry=2.8.3=pyhd8ed1ab_0
   - aiosignal=1.3.1=pyhd8ed1ab_0
@@ -24,10 +25,10 @@ dependencies:
   - blinker=1.6.2=pyhd8ed1ab_0
   - brotlipy=0.7.0=py311hd4cff14_1005
   - bzip2=1.0.8=h7f98852_4
-  - ca-certificates=2022.12.7=ha878542_0
+  - ca-certificates=2023.01.10=h06a4308_0
   - cachetools=5.3.0=pyhd8ed1ab_0
   - celery=5.2.7=pyhd8ed1ab_0
-  - certifi=2022.12.7=pyhd8ed1ab_0
+  - certifi=2020.6.20=pyhd3eb1b0_3
   - cffi=1.15.1=py311h409f033_3
   - charset-normalizer=2.0.4=pyhd3eb1b0_0
   - click=8.1.3=unix_pyhd8ed1ab_2
@@ -67,6 +68,8 @@ dependencies:
   - future=0.18.3=pyhd8ed1ab_0
   - gitdb=4.0.10=pyhd8ed1ab_0
   - gitpython=3.1.31=pyhd8ed1ab_0
+  - gmp=6.2.1=h58526e2_0
+  - gmpy2=2.1.2=py311h6a5fa03_1
   - google-api-core=2.11.0=pyhd8ed1ab_0
   - google-api-python-client=2.86.0=pyhd8ed1ab_0
   - google-auth=2.17.3=pyh1a96a4e_0
@@ -78,6 +81,7 @@ dependencies:
   - gunicorn=20.1.0=py311h38be061_3
   - httplib2=0.22.0=pyhd8ed1ab_0
   - hydra-core=1.3.2=pyhd8ed1ab_0
+  - icu=72.1=hcb278e6_0
   - idna=3.4=pyhd8ed1ab_0
   - imageio=2.28.1=pyh24c5eb1_0
   - importlib-metadata=6.6.0=pyha770c72_0
@@ -93,6 +97,8 @@ dependencies:
   - lcms2=2.15=haa2dc70_1
   - ld_impl_linux-64=2.40=h41732ed_0
   - lerc=4.0.0=h27087fc_0
+  - libblas=3.9.0=16_linux64_mkl
+  - libcblas=3.9.0=16_linux64_mkl
   - libdeflate=1.18=h0b41bf4_0
   - libedit=3.1.20191231=he28a2e2_2
   - libexpat=2.5.0=hcb278e6_1
@@ -102,7 +108,10 @@ dependencies:
   - libgfortran5=11.2.0=h1234567_1
   - libgit2=1.6.4=h747ad27_0
   - libgomp=12.2.0=h65d4601_19
+  - libhwloc=2.9.1=hd6dc26d_0
+  - libiconv=1.17=h166bdaf_0
   - libjpeg-turbo=2.1.5.1=h0b41bf4_0
+  - liblapack=3.9.0=16_linux64_mkl
   - libnsl=2.0.0=h7f98852_0
   - libpng=1.6.39=h753d276_0
   - libprotobuf=3.21.12=h3eb15da_0
@@ -114,22 +123,23 @@ dependencies:
   - libuuid=2.38.1=h0b41bf4_0
   - libwebp-base=1.3.0=h0b41bf4_0
   - libxcb=1.13=h7f98852_1004
+  - libxml2=2.10.4=hfdac1af_0
   - libzlib=1.2.13=h166bdaf_4
+  - llvm-openmp=16.0.2=h4dfa4b3_0
   - mako=1.2.4=pyhd8ed1ab_0
   - markdown-it-py=2.2.0=pyhd8ed1ab_0
   - markupsafe=2.1.2=py311h2582759_0
   - mdurl=0.1.0=pyhd8ed1ab_0
-  - mkl=2021.4.0=h06a4308_640
-  - mkl-service=2.4.0=py311h5eee18b_0
-  - mkl_fft=1.3.1=py311h30b3d60_0
-  - mkl_random=1.2.2=py311hba01205_0
+  - mkl=2022.2.1=h84fe81f_16997
   - mlflow=1.2.0=py_1
+  - mpc=1.3.1=hfe3b2da_0
+  - mpfr=4.2.0=hb012696_0
+  - mpmath=1.3.0=pyhd8ed1ab_0
   - multidict=6.0.4=py311h2582759_0
   - nanotime=0.5.2=py_0
   - ncurses=6.3=h27087fc_1
   - networkx=3.1=pyhd8ed1ab_0
-  - numpy=1.24.3=py311hc206e33_0
-  - numpy-base=1.24.3=py311hfd5febd_0
+  - numpy=1.24.3=py311h64a7726_0
   - oauth2client=4.1.3=py_0
   - oauthlib=3.2.2=pyhd8ed1ab_0
   - omegaconf=2.3.0=pyhd8ed1ab_0
@@ -169,6 +179,7 @@ dependencies:
   - python-gssapi=1.8.2=py311ha54f867_2
   - python-tzdata=2023.3=pyhd8ed1ab_0
   - python_abi=3.11=3_cp311
+  - pytorch=2.0.0=cpu_py311h410fd25_0
   - pytz=2023.3=pyhd8ed1ab_0
   - pyu2f=0.1.5=pyhd8ed1ab_0
   - pywin32-on-windows=0.1.0=pyh1179c8e_3
@@ -181,21 +192,25 @@ dependencies:
   - ruamel.yaml=0.17.21=py311h2582759_3
   - ruamel.yaml.clib=0.2.7=py311h2582759_1
   - scikit-learn=1.2.2=py311h6a678d5_0
-  - scipy=1.10.1=py311hc206e33_0
+  - scipy=1.9.3=py311h69910c8_2
   - scmrepo=1.0.2=pyhd8ed1ab_0
   - setuptools=67.7.2=pyhd8ed1ab_0
   - shortuuid=1.0.11=pyhd8ed1ab_0
   - shtab=1.6.1=pyhd8ed1ab_0
   - simplejson=3.19.1=py311h2582759_0
   - six=1.16.0=pyh6c4a22f_0
+  - sleef=3.5.1=h9b69904_2
   - smmap=3.0.5=pyh44b312d_0
   - sqlalchemy=2.0.12=py311h459d7ec_0
   - sqlparse=0.4.4=pyhd8ed1ab_0
   - sqltrie=0.3.1=pyhd8ed1ab_0
+  - sympy=1.11.1=pypyh9d50eac_103
   - tabulate=0.9.0=pyhd8ed1ab_1
+  - tbb=2021.9.0=hf52228f_0
   - threadpoolctl=2.2.0=pyh0d69192_0
   - tk=8.6.12=h27826a3_0
   - tomlkit=0.11.7=pyha770c72_0
+  - torchmetrics=0.11.4=pyhd8ed1ab_0
   - tqdm=4.65.0=pyhd8ed1ab_1
   - typing=3.10.0.0=pyhd8ed1ab_0
   - typing-extensions=4.5.0=hd8ed1ab_0
@@ -220,7 +235,6 @@ dependencies:
   - pip:
       - cmake==3.26.3
       - lit==16.0.2
-      - mpmath==1.3.0
       - nvidia-cublas-cu11==11.10.3.66
       - nvidia-cuda-cupti-cu11==11.7.101
       - nvidia-cuda-nvrtc-cu11==11.7.99
@@ -232,8 +246,6 @@ dependencies:
       - nvidia-cusparse-cu11==11.7.4.91
       - nvidia-nccl-cu11==2.14.3
       - nvidia-nvtx-cu11==11.7.91
-      - sympy==1.11.1
-      - torch==2.0.0
       - torchvision==0.15.1
       - triton==2.0.0
 prefix: /home/pipanther/miniconda3/envs/pokenv
