--- a/environment.yml
+++ b/environment.yml
@@ -21,10 +21,11 @@ dependencies:
   - blinker=1.4=py311h06a4308_0
   - brotlipy=0.7.0=py311h5eee18b_1002
   - bzip2=1.0.8=h7b6447c_0
-  - ca-certificates=2023.01.10=h06a4308_0
+  - c-ares=1.18.1=h7f98852_0
+  - ca-certificates=2022.12.7=ha878542_0
   - cachetools=4.2.2=pyhd3eb1b0_0
   - celery=5.2.7=pyhd8ed1ab_0
-  - certifi=2022.12.7=py311h06a4308_0
+  - certifi=2022.12.7=pyhd8ed1ab_0
   - cffi=1.15.1=py311h5eee18b_3
   - charset-normalizer=2.0.4=pyhd3eb1b0_0
   - click=8.0.4=py311h06a4308_0
@@ -39,6 +40,7 @@ dependencies:
   - databricks-cli=0.17.6=py311h06a4308_1
   - dataclasses=0.8=pyh6d0b6a4_7
   - decorator=5.1.1=pyhd3eb1b0_0
+  - deprecated=1.2.13=pyh6c4a22f_0
   - dictdiffer=0.9.0=pyhd8ed1ab_0
   - diskcache=5.6.1=pyhd8ed1ab_0
   - distro=1.5.0=pyhd3eb1b0_1
@@ -76,6 +78,7 @@ dependencies:
   - gorilla=0.4.0=pyhd8ed1ab_0
   - grandalf=0.7=pyhd8ed1ab_0
   - greenlet=2.0.1=py311h6a678d5_0
+  - grpcio=1.54.1=py311hcafe171_0
   - gunicorn=20.1.0=py311h06a4308_0
   - httplib2=0.22.0=pyhd8ed1ab_0
   - hydra-core=1.3.2=pyhd8ed1ab_0
@@ -93,6 +96,7 @@ dependencies:
   - lcms2=2.15=haa2dc70_1
   - ld_impl_linux-64=2.38=h1181459_1
   - lerc=4.0.0=h27087fc_0
+  - libabseil=20230125.0=cxx17_hcb278e6_1
   - libblas=3.9.0=16_linux64_mkl
   - libcblas=3.9.0=16_linux64_mkl
   - libdeflate=1.18=h0b41bf4_0
@@ -103,6 +107,7 @@ dependencies:
   - libgfortran-ng=11.2.0=h00389a5_1
   - libgfortran5=11.2.0=h1234567_1
   - libgit2=1.6.4=h747ad27_0
+  - libgrpc=1.54.1=hcf146ea_0
   - libjpeg-turbo=2.1.5.1=h0b41bf4_0
   - liblapack=3.9.0=16_linux64_mkl
   - libnsl=2.0.0=h5eee18b_0
@@ -133,6 +138,13 @@ dependencies:
   - omegaconf=2.3.0=pyhd8ed1ab_0
   - openjpeg=2.5.0=hfec8fc6_2
   - openssl=3.1.0=hd590300_3
+  - opentelemetry-api=1.16.0=pyhd8ed1ab_0
+  - opentelemetry-exporter-jaeger=1.10.0=pyhd8ed1ab_0
+  - opentelemetry-exporter-jaeger-proto-grpc=1.10.0=pyhd8ed1ab_0
+  - opentelemetry-exporter-jaeger-thrift=1.10.0=pyhd8ed1ab_0
+  - opentelemetry-instrumentation=0.38b0=pyhd8ed1ab_0
+  - opentelemetry-sdk=1.16.0=pyhd8ed1ab_0
+  - opentelemetry-semantic-conventions=0.37b0=pyhd8ed1ab_0
   - orjson=3.8.8=py311h52d8a92_0
   - packaging=23.0=py311h06a4308_0
   - pandas=2.0.1=py311h320fe9a_0
@@ -169,6 +181,7 @@ dependencies:
   - pywin32-on-windows=0.1.0=pyh1179c8e_3
   - pyyaml=6.0=py311h5eee18b_1
   - querystring_parser=1.2.4=py311h06a4308_0
+  - re2=2023.02.02=hcb278e6_0
   - readline=8.2=h5eee18b_0
   - requests=2.29.0=py311h06a4308_0
   - rich=12.5.1=py311h06a4308_0
@@ -191,6 +204,7 @@ dependencies:
   - tabulate=0.8.10=py311h06a4308_0
   - tbb=2021.8.0=hdb19cb5_0
   - threadpoolctl=2.2.0=pyh0d69192_0
+  - thrift=0.18.1=py311hcafe171_0
   - tk=8.6.12=h27826a3_0
   - tomlkit=0.11.1=py311h06a4308_0
   - torchmetrics=0.11.4=pyhd8ed1ab_0
@@ -206,6 +220,7 @@ dependencies:
   - websocket-client=0.58.0=py311h06a4308_4
   - werkzeug=2.2.3=py311h06a4308_0
   - wheel=0.38.4=py311h06a4308_0
+  - wrapt=1.15.0=py311h2582759_0
   - xorg-libxau=1.0.9=h7f98852_0
   - xorg-libxdmcp=1.1.3=h7f98852_0
   - xz=5.4.2=h5eee18b_0
@@ -213,6 +228,7 @@ dependencies:
   - yarl=1.8.1=py311h5eee18b_0
   - zc.lockfile=2.0=pyhd3eb1b0_0
   - zipp=3.11.0=py311h06a4308_0
+  - zlib=1.2.13=h166bdaf_4
   - zstd=1.5.2=h3eb15da_6
   - pip:
       - cmake==3.26.3
@@ -220,6 +236,7 @@ dependencies:
       - cycler==0.11.0
       - fonttools==4.39.3
       - kiwisolver==1.4.4
+      - libpng-bins==0.0.3
       - lit==16.0.2
       - markdown==3.4.3
       - matplotlib==3.7.1
