--- a/.dvc/config
+++ b/.dvc/config
@@ -1,4 +1,4 @@
 [core]
     remote = mydrive
 ['remote "mydrive"']
-    url = ../gdrive:103YNpXvR2ipOU7_r2lZHKQ4vYj79Sm9_
+    url = gdrive://1J9ygttylbEVkE0DMxuOU55p8Ltr5-7N3
