--- a/environment.yml
+++ b/environment.yml
@@ -255,4 +255,6 @@ dependencies:
       - pyarrow==11.0.0
       - torchvision==0.15.1
       - triton==2.0.0
-prefix: /home/pipanther/miniconda3/envs/pokenv
+      - pytest==7.1.3
+      - pylint
+prefix: C:\Users\Aziz\miniconda3\envs\pokenv
